# ppg_incidents

./: .gitignore  ADDING_CAUSES_FACTORS.md  DEVELOPMENT.md  LICENSE  README.md  manage.py  pyproject.toml  run.py  view_logs.py
.cursor/rules/: project-rules.mdc
.github/workflows/: test.yml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  countryUtils.js  index.css
incidents/: csv_export.py  models.py  serializers.py  urls.py  views.py
incidents/migrations/: 0001_initial.py  0002_incident_summary_incident_title.py  0003_incident_collapse_types.py  0004_incident_paramotor_type.py  0005_remove_incident_factor_helmet_worn_and_more.py  0006_alter_incident_factor_accelerator.py  0007_incident_pilot_actions.py  0008_incident_injury_details.py  0009_incident_bad_hardware_preflight_and_more.py  0010_incident_factor_ground_starting.py  0011_incident_factor_powerline_collision.py  0012_rename_pilot_incident_pilot_details_and_more.py  0013_factor_turbulent_conditions.py  0014_report_raw.py  0015_alter_incident_pilot_details_and_more.py  0016_factor_spiral_maneuver.py  0017_factor_mid_air_collision.py  0018_add_verified_field.py  0019_alter_incident_flight_phase.py  0020_incident_wind_speed_ms.py  0021_incident_primary_cause.py  0022_alter_incident_primary_cause.py  0023_incident_factor_wake_turbulence.py  0024_incident_factor_rain.py  0025_add_preflight_error_primary_cause.py  0026_add_ground_starting_primary_cause.py  0027_add_ground_object_collision_primary_cause.py  (+10 more)
next-frontend/: README.md  package-lock.json  package.json
ppg_incidents/: ai_communication.py  asgi.py  bhpa_parser.py  cleaner.py  downloader.py  fts_store.py  logging_middleware.py  settings.py  urls.py  vector_store.py  wsgi.py
tests/: conftest.py  test_bhpa_parser.py  test_endpoints.py  test_logging.py
(+65 files in other folders)
