[project]
name = "ppg-incidents"
version = "0.1.0"
description = "Paramotor incidents database"
authors = [
    {name = "fippo"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
