[project]
name = "ppg-incidents"
version = "0.1.0"
description = "Paramotor incidents database"
authors = [
    {name = "fippo"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "certifi (>=2025.11.12,<2026.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "sqlite-vec (>=0.1.6,<0.2.0)",
    "youtube-transcript-api (>=1.2.3,<2.0.0)",
    "yt-dlp (>=2024.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-django = "^4.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ppg_incidents.settings"
python_files = ["test_*.py"]

